updates in notebook

--- a/src/cdmi_examples.ipynb
+++ b/src/cdmi_examples.ipynb
@@ -612,7 +612,7 @@
    ],
    "source": [
     "# Function for estimating causal impact among variables\n",
-    "causal_matrix, end_time = deepCause(original_data, knockoffs, model_path, params)"
+    "causal_matrix, predicted_graph, end_time = deepCause(original_data, knockoffs, model_path, params)"
    ]
   },
   {
@@ -640,6 +640,24 @@
    ],
    "source": [
     "func.plot_causal_graph(causal_matrix, columns, model_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluate CDMI Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intervention_methods = ['In-dist', 'Out-dist', 'Mean', 'Uniform']\n",
+    "actual_graph = pars.get(\"true_graph\")\n",
+    "func.evaluate(actual_graph, predicted_graph, intervention_methods)"
    ]
   },
   {
