--- a/src/cdmi_examples.ipynb
+++ b/src/cdmi_examples.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time now: 1713532095.3205\n"
+      "Time now: 1713534596.2015922\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "2015-04-05  0.033211  0.610471   0.439213       0.013274"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -365,13 +365,13 @@
       "Causal Link: T --------------> T\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.6, p-value: 0.05, KLD: -0.1\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: -0.06\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -4.53\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -4.31\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.6, p-value: 0.05, KLD: -0.3\n",
+      "Test statistic: 0.6, p-value: 0.05, KLD: -0.22\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 1.0, p-value: 0.0, KLD: -1.49\n",
@@ -380,13 +380,13 @@
       "Causal Link: T --------------> P\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: 0.29\n",
+      "Test statistic: 0.5, p-value: 0.17, KLD: 0.34\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 0.8, p-value: 0.0, KLD: -0.47\n",
+      "Test statistic: 0.9, p-value: 0.0, KLD: -0.81\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: 0.27\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: 0.27\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.8, p-value: 0.0, KLD: -0.74\n",
@@ -398,10 +398,10 @@
       "Test statistic: 0.3, p-value: 0.79, KLD: 0.18\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 0.2, p-value: 0.99, KLD: -0.23\n",
+      "Test statistic: 0.2, p-value: 0.99, KLD: -0.38\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: -0.55\n",
+      "Test statistic: 0.3, p-value: 0.79, KLD: -0.5\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 1.0, p-value: 0.0, KLD: 6.45\n",
@@ -410,13 +410,13 @@
       "Causal Link: T --------------> Strain$_{ns}$\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: 0.03\n",
+      "Test statistic: 0.2, p-value: 0.99, KLD: 0.04\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -0.72\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -0.75\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.4, p-value: 0.42, KLD: 0.13\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: 0.15\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.9, p-value: 0.0, KLD: -0.57\n",
@@ -425,13 +425,13 @@
       "Causal Link: P --------------> T\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: -0.16\n",
+      "Test statistic: 0.5, p-value: 0.17, KLD: -0.17\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -0.93\n",
+      "Test statistic: 0.9, p-value: 0.0, KLD: -0.73\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.7, p-value: 0.01, KLD: -0.15\n",
+      "Test statistic: 0.9, p-value: 0.0, KLD: -0.22\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.9, p-value: 0.0, KLD: -0.7\n",
@@ -440,13 +440,13 @@
       "Causal Link: P --------------> P\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.4, p-value: 0.42, KLD: 0.02\n",
+      "Test statistic: 0.3, p-value: 0.79, KLD: -0.02\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -6.17\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -5.88\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: 0.1\n",
+      "Test statistic: 0.3, p-value: 0.79, KLD: 0.11\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 1.0, p-value: 0.0, KLD: -1.52\n",
@@ -455,13 +455,13 @@
       "Causal Link: P --------------> GW$_{mb}$\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.4, p-value: 0.42, KLD: 0.48\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: 0.43\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 0.7, p-value: 0.01, KLD: 1.79\n",
+      "Test statistic: 0.7, p-value: 0.01, KLD: 1.82\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.4, p-value: 0.42, KLD: 0.55\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: 0.67\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.2, p-value: 0.99, KLD: 0.12\n",
@@ -470,13 +470,13 @@
       "Causal Link: P --------------> Strain$_{ns}$\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: -0.05\n",
+      "Test statistic: 0.5, p-value: 0.17, KLD: -0.13\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -0.53\n",
+      "Test statistic: 0.9, p-value: 0.0, KLD: -0.39\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: 0.18\n",
+      "Test statistic: 0.5, p-value: 0.17, KLD: 0.17\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.7, p-value: 0.01, KLD: -0.42\n",
@@ -485,14 +485,14 @@
       "Causal Link: GW$_{mb}$ --------------> T\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: -0.2\n",
+      "Test statistic: 0.5, p-value: 0.17, KLD: -0.22\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -0.81\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -0.74\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.6, p-value: 0.05, KLD: -0.22\n",
-      "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
+      "Test statistic: 0.7, p-value: 0.01, KLD: -0.22\n",
+      "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 1.0, p-value: 0.0, KLD: -1.67\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
@@ -500,13 +500,13 @@
       "Causal Link: GW$_{mb}$ --------------> P\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: -0.1\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: -0.12\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: -0.25\n",
+      "Test statistic: 0.6, p-value: 0.05, KLD: -0.41\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: -0.03\n",
+      "Test statistic: 0.3, p-value: 0.79, KLD: 0.0\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.5, p-value: 0.17, KLD: -0.28\n",
@@ -515,14 +515,14 @@
       "Causal Link: GW$_{mb}$ --------------> GW$_{mb}$\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.8, p-value: 0.0, KLD: 5.15\n",
+      "Test statistic: 0.8, p-value: 0.0, KLD: 4.24\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -22.97\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -24.87\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.6, p-value: 0.05, KLD: 1.21\n",
-      "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
+      "Test statistic: 0.7, p-value: 0.01, KLD: 1.63\n",
+      "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.8, p-value: 0.0, KLD: 2.38\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
@@ -530,13 +530,13 @@
       "Causal Link: GW$_{mb}$ --------------> Strain$_{ns}$\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.2, p-value: 0.99, KLD: 0.02\n",
+      "Test statistic: 0.2, p-value: 0.99, KLD: 0.09\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 0.9, p-value: 0.0, KLD: -0.26\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -0.75\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.6, p-value: 0.05, KLD: 0.18\n",
+      "Test statistic: 0.5, p-value: 0.17, KLD: 0.17\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 1.0, p-value: 0.0, KLD: -0.79\n",
@@ -545,13 +545,13 @@
       "Causal Link: Strain$_{ns}$ --------------> T\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.6, p-value: 0.05, KLD: -0.33\n",
-      "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
+      "Test statistic: 0.7, p-value: 0.01, KLD: -0.4\n",
+      "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -0.73\n",
+      "Test statistic: 0.8, p-value: 0.0, KLD: -0.26\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.9, p-value: 0.0, KLD: -0.42\n",
+      "Test statistic: 0.9, p-value: 0.0, KLD: -0.46\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 1.0, p-value: 0.0, KLD: -0.51\n",
@@ -560,13 +560,13 @@
       "Causal Link: Strain$_{ns}$ --------------> P\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: 0.04\n",
+      "Test statistic: 0.3, p-value: 0.79, KLD: 0.13\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 0.4, p-value: 0.42, KLD: -0.15\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: 0.01\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: 0.12\n",
+      "Test statistic: 0.3, p-value: 0.79, KLD: 0.13\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.6, p-value: 0.05, KLD: -0.33\n",
@@ -575,13 +575,13 @@
       "Causal Link: Strain$_{ns}$ --------------> GW$_{mb}$\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 0.4, p-value: 0.42, KLD: -0.65\n",
+      "Test statistic: 0.5, p-value: 0.17, KLD: -0.67\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 0.3, p-value: 0.79, KLD: -0.33\n",
-      "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
+      "Test statistic: 0.7, p-value: 0.01, KLD: -1.33\n",
+      "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 0.5, p-value: 0.17, KLD: -0.94\n",
+      "Test statistic: 0.4, p-value: 0.42, KLD: -0.84\n",
       "\u001b[94mFail to reject null hypothesis\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 0.8, p-value: 0.0, KLD: 3.11\n",
@@ -590,13 +590,13 @@
       "Causal Link: Strain$_{ns}$ --------------> Strain$_{ns}$\n",
       "-------------*****-----------------------*****-------------\n",
       "Intervention: In-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -0.82\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -0.81\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Out-dist\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -3.63\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -3.28\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Mean\n",
-      "Test statistic: 1.0, p-value: 0.0, KLD: -0.91\n",
+      "Test statistic: 1.0, p-value: 0.0, KLD: -0.87\n",
       "\u001b[92mNull hypothesis is rejected\u001b[0m\n",
       "Intervention: Uniform\n",
       "Test statistic: 1.0, p-value: 0.0, KLD: -1.29\n",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -651,13 +651,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "intervention_methods = ['In-dist', 'Out-dist', 'Mean', 'Uniform']\n",
     "actual_graph = pars.get(\"true_graph\")\n",
-    "func.evaluate(actual_graph, predicted_graph, intervention_methods)"
+    "# func.evaluate(actual_graph, predicted_graph, intervention_methods)"
    ]
   },
   {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
