updates rivernet experiments

--- a/src/cdmi_examples.ipynb
+++ b/src/cdmi_examples.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CDMI: Causal Discovery in Multivariate Timeseries\n",
+    "## CDMI: Causal Discovery in Multivariate Timeseries\n",
     "\n",
-    "#### Notebook written by Wasim Ahmad\n",
-    "#### Computer Vision Group (CVG)\n",
-    "#### Friedrich Schiller University (FSU) Jena, Germany\n",
-    "##### Last updated on: April 19, 2024\n",
+    "##### Notebook written by Wasim Ahmad\n",
+    "##### Computer Vision Group (CVG)\n",
+    "##### Friedrich Schiller University (FSU) Jena, Germany\n",
+    "###### Last updated on: April 19, 2024\n",
     "\n",
     "\n",
     "The purpose of this notebook is to provide a simple usage example of the `CDMI` for generating causal graph for mulativariate time series. Higher-dimensional time series may require additional computational time or the availaibility of a graphical processing unit."
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time now: 1713534596.2015922\n"
+      "Time now: 1713882705.821096\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
     "start_time = time.time()\n",
     "print(f'Time now: {start_time}')\n",
     "# Parameters\n",
-    "pars = parameters.get_geo_params()\n",
+    "pars = parameters.get_rivernet_params()\n",
     "freq = pars.get(\"freq\")\n",
     "epochs = pars.get(\"epochs\")\n",
     "win_size = pars.get(\"win_size\")\n",
@@ -127,100 +127,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>P</th>\n",
-       "      <th>GW$_{mb}$</th>\n",
-       "      <th>Strain$_{ns}$</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DateTime</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-04-01</th>\n",
-       "      <td>0.048751</td>\n",
-       "      <td>0.247259</td>\n",
-       "      <td>0.456807</td>\n",
-       "      <td>0.054352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-04-02</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.237814</td>\n",
-       "      <td>0.450894</td>\n",
-       "      <td>0.047039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-04-03</th>\n",
-       "      <td>0.031139</td>\n",
-       "      <td>0.490049</td>\n",
-       "      <td>0.495007</td>\n",
-       "      <td>0.033643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-04-04</th>\n",
-       "      <td>0.007262</td>\n",
-       "      <td>0.391633</td>\n",
-       "      <td>0.480678</td>\n",
-       "      <td>0.025355</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-04-05</th>\n",
-       "      <td>0.033211</td>\n",
-       "      <td>0.610471</td>\n",
-       "      <td>0.439213</td>\n",
-       "      <td>0.013274</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   T         P  GW$_{mb}$  Strain$_{ns}$\n",
-       "DateTime                                                \n",
-       "2015-04-01  0.048751  0.247259   0.456807       0.054352\n",
-       "2015-04-02  0.000000  0.237814   0.450894       0.047039\n",
-       "2015-04-03  0.031139  0.490049   0.495007       0.033643\n",
-       "2015-04-04  0.007262  0.391633   0.480678       0.025355\n",
-       "2015-04-05  0.033211  0.610471   0.439213       0.013274"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3433, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_2087816/4082137524.py\", line 1, in <module>\n",
+      "    df = datasets.load_river_network()\n",
+      "  File \"/home/ahmad/Projects/deepCausality/src/dataloader.py\", line 66, in load_river_network\n",
+      "    data = pd.read_csv(r\"../datasets/rivers_alpha/prototype_ts_ds.csv\", index_col=0)\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/pandas/io/parsers/readers.py\", line 899, in read_csv\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/pandas/io/parsers/readers.py\", line 2004, in _refine_defaults_read\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/pandas/util/_validators.py\", line 446, in check_dtype_backend\n",
+      "NameError: name 'lib' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2052, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/stack_data/core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"/home/ahmad/anaconda3/envs/deepcause/lib/python3.8/site-packages/executing/executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     ]
     }
    ],
    "source": [
-    "df = datasets.load_geo_data()\n",
+    "df = datasets.load_river_network()\n",
+    "# df = df.iloc[:, 0:3]\n",
     "# df.plot(figsize=(9, 4), linewidth=0.66, use_index=True)\n",
     "# plt.show()\n",
     "# func.corr_heatmap(df)\n",
@@ -236,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,14 +230,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create DeepAR estimator"
+    "#### Create DeepAR Estimator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas.tseries.offsets' has no attribute 'YearOffset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# create estimator\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m estimator \u001b[38;5;241m=\u001b[39m \u001b[43mDeepAREstimator\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprediction_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprediction_length\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcontext_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprediction_length\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfreq\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfreq\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_layers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_layers\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_cells\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_cells\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdropout_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdropout_rate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mTrainer\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m        \u001b[49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcpu\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m        \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mepochs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m        \u001b[49m\u001b[43mhybridize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1E-4\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m\n\u001b[1;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdistr_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mMultivariateGaussianOutput\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdim\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/deepcause/lib/python3.8/site-packages/gluonts/core/component.py:437\u001b[0m, in \u001b[0;36mvalidated.<locals>.validator.<locals>.init_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    434\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m__getnewargs_ex__ \u001b[38;5;241m=\u001b[39m validated_getnewargs_ex\n\u001b[1;32m    435\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__repr__\u001b[39m \u001b[38;5;241m=\u001b[39m validated_repr\n\u001b[0;32m--> 437\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mall_args\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/deepcause/lib/python3.8/site-packages/gluonts/model/deepar/_estimator.py:193\u001b[0m, in \u001b[0;36mDeepAREstimator.__init__\u001b[0;34m(self, freq, prediction_length, trainer, context_length, num_layers, num_cells, cell_type, dropout_rate, use_feat_dynamic_real, use_feat_static_cat, use_feat_static_real, cardinality, embedding_dimension, distr_output, scaling, lags_seq, time_features, num_parallel_samples, dtype)\u001b[0m\n\u001b[1;32m    184\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscaling \u001b[38;5;241m=\u001b[39m scaling\n\u001b[1;32m    185\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlags_seq \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    186\u001b[0m     lags_seq\n\u001b[1;32m    187\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m lags_seq \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    188\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m get_lags_for_frequency(freq_str\u001b[38;5;241m=\u001b[39mfreq)\n\u001b[1;32m    189\u001b[0m )\n\u001b[1;32m    190\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtime_features \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    191\u001b[0m     time_features\n\u001b[1;32m    192\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m time_features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 193\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m \u001b[43mtime_features_from_frequency_str\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfreq\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    194\u001b[0m )\n\u001b[1;32m    196\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhistory_length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontext_length \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlags_seq)\n\u001b[1;32m    198\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_parallel_samples \u001b[38;5;241m=\u001b[39m num_parallel_samples\n",
+      "File \u001b[0;32m~/anaconda3/envs/deepcause/lib/python3.8/site-packages/gluonts/time_feature/_base.py:139\u001b[0m, in \u001b[0;36mtime_features_from_frequency_str\u001b[0;34m(freq_str)\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtime_features_from_frequency_str\u001b[39m(freq_str: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[TimeFeature]:\n\u001b[1;32m    127\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;124;03m    Returns a list of time features that will be appropriate for the given frequency string.\u001b[39;00m\n\u001b[1;32m    129\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    135\u001b[0m \n\u001b[1;32m    136\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    138\u001b[0m     features_by_offsets \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m--> 139\u001b[0m         \u001b[43moffsets\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mYearOffset\u001b[49m: [],\n\u001b[1;32m    140\u001b[0m         offsets\u001b[38;5;241m.\u001b[39mMonthOffset: [MonthOfYear],\n\u001b[1;32m    141\u001b[0m         offsets\u001b[38;5;241m.\u001b[39mWeek: [DayOfMonth, WeekOfYear],\n\u001b[1;32m    142\u001b[0m         offsets\u001b[38;5;241m.\u001b[39mDay: [DayOfWeek, DayOfMonth, DayOfYear],\n\u001b[1;32m    143\u001b[0m         offsets\u001b[38;5;241m.\u001b[39mBusinessDay: [DayOfWeek, DayOfMonth, DayOfYear],\n\u001b[1;32m    144\u001b[0m         offsets\u001b[38;5;241m.\u001b[39mHour: [HourOfDay, DayOfWeek, DayOfMonth, DayOfYear],\n\u001b[1;32m    145\u001b[0m         offsets\u001b[38;5;241m.\u001b[39mMinute: [\n\u001b[1;32m    146\u001b[0m             MinuteOfHour,\n\u001b[1;32m    147\u001b[0m             HourOfDay,\n\u001b[1;32m    148\u001b[0m             DayOfWeek,\n\u001b[1;32m    149\u001b[0m             DayOfMonth,\n\u001b[1;32m    150\u001b[0m             DayOfYear,\n\u001b[1;32m    151\u001b[0m         ],\n\u001b[1;32m    152\u001b[0m     }\n\u001b[1;32m    154\u001b[0m     offset \u001b[38;5;241m=\u001b[39m to_offset(freq_str)\n\u001b[1;32m    156\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m offset_type, feature_classes \u001b[38;5;129;01min\u001b[39;00m features_by_offsets\u001b[38;5;241m.\u001b[39mitems():\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas.tseries.offsets' has no attribute 'YearOffset'"
+     ]
+    }
+   ],
    "source": [
     "# create estimator\n",
     "estimator = DeepAREstimator(\n",
